@@ -15,6 +15,7 @@ BIO *           T_PTR
 BIO_METHOD *    T_PTR
 EVP_PKEY *      T_PTR
 const EVP_MD *  T_PTR
+EVP_MD *        T_PTR
 CERT *          T_PTR
 LHASH *         T_PTR
 struct lhash_st_SSL_SESSION *	T_PTR
